@@ -2896,7 +2896,7 @@ file_expand_path(VALUE fname, VALUE dname, int abs_mode, VALUE result)
 		xfree(dir);
 		rb_enc_associate_index(result, rb_filesystem_encindex());
 	    }
-	    else rb_enc_copy(result, fname);
+	    else rb_enc_check(result, fname);
 	    p = chompdirsep(skiproot(buf));
 	    s += 2;
 	}
@@ -2906,7 +2906,7 @@ file_expand_path(VALUE fname, VALUE dname, int abs_mode, VALUE result)
 	if (!NIL_P(dname)) {
 	    file_expand_path(dname, Qnil, abs_mode, result);
 	    BUFINIT();
-	    rb_enc_copy(result, fname);
+	    rb_enc_check(result, fname);
 	}
 	else {
 	    char *dir = my_getcwd();
